--- a/app2/index.html
+++ b/app2/index.html
@@ -1,6 +1,3 @@
-<?php
-include_once "base.php";
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +7,7 @@ include_once "base.php";
     <title>學生資料管理系統</title>
     <link rel="shortcut icon" href="#" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <style>
       table{
         margin:auto;
@@ -28,35 +26,21 @@ include_once "base.php";
   <h1 class="header">學生資料管理系統</h1>
   <h5>新增資料表單</h5>
   <form action="api/insert.php" method="post">
-    <div>姓名<input type="text" name="name"></div>
-    <div>班級<input type="text" name="classes"></div>
-    <div>座號<input type="text" name="num"></div>
-    <div>成績<input type="text" name="score"></div>
-    <div><input type="submit" value="新增"></div>
+    <div>姓名<input type="text" id="name" name="name"></div>
+    <div>班級<input type="text" id="classes" name="classes"></div>
+    <div>座號<input type="text" id="num" name="num"></div>
+    <div>成績<input type="text" id="score" name="score"></div>
+    <div><input type="button" onclick="create()" value="新增"></div>
   </form>
   <table>
-    <tr>
+    <tr id="header">
       <td>id</td>
       <td>name</td>
       <td>classes</td>
       <td>num</td>
       <td>score</td>
     </tr>
-<?php
-
-$rows=$Stu->all();
-foreach($rows as $row){
-  ?>
-<tr>
-      <td><?=$row['id'];?></td>
-      <td><?=$row['name'];?></td>
-      <td><?=$row['classes'];?></td>
-      <td><?=$row['num'];?></td>
-      <td><?=$row['score'];?></td>
-</tr>
-  <?php
-}
-?>
+    <tbody id="list"></tbody>
 
   </table>
   
@@ -71,15 +55,33 @@ foreach($rows as $row){
 * 5.是否需要更新畫面內容？更新畫面的方法？
 ************************************/
 
+query();
 
 //新增資料的函式
 function create(){
+  let name=$("#name").val();
+  let classes=$("#classes").val();
+  let num=$("#num").val();
+  let score=$("#score").val();
+  console.log(name,classes,num,score);
 
+  $.post("api/insert.php",{name,classes,num,score},function(res){
+    console.log(res);
+    if(res=='成功'){
+      alert("新增成功");
+      query()
+    }else{
+      
+      alert("新增失敗");
+    }
+  })
 }
 
 //查詢資料的函式
 function query(){
-
+$.get("api/query.php",function(res){
+  $("#list").html(res);
+})
 }
 
 //編輯資料的函式
