--- a/app2/index.html
+++ b/app2/index.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <style>
       table{
-        margin:auto;
+        margin:100px auto;
         width:500px;
         border:1px solid;
         border-collapse:collapse;
@@ -39,6 +39,7 @@
       <td>classes</td>
       <td>num</td>
       <td>score</td>
+      <td>操作</td>
     </tr>
     <tbody id="list"></tbody>
 
@@ -90,8 +91,13 @@ function update(){
 }
 
 //刪除資料的函式
-function del(){
-
+function del(id){
+  let con=confirm("你確定要刪除"+id+"的資料嗎?");
+  if(con){
+    $.post("api/delete.php",{id},function(){
+      query();
+    })
+  }
 }
 
 </script>
