--- a/app2/index.html
+++ b/app2/index.html
@@ -10,7 +10,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <style>
       table{
-        margin:100px auto;
         width:500px;
         border:1px solid;
         border-collapse:collapse;
@@ -18,6 +17,18 @@
       td{
         border:1px solid;
         padding: 5px 10px;
+      }
+      .modal{
+        margin:auto;
+        position: absolute;
+        top: calc( ( 100% - 300px ) / 2 );
+        left: calc( ( 100% - 400px ) / 2 );
+        width: 300px;
+        height: 400px;
+        border: 1px solid gray;
+        box-shadow: 0 0 5px bisque;
+        background-color: #eee;
+        display: none;
       }
     </style>
     <!---匯入要使用的函式庫--->
@@ -30,7 +41,7 @@
     <div>班級<input type="text" id="classes" name="classes"></div>
     <div>座號<input type="text" id="num" name="num"></div>
     <div>成績<input type="text" id="score" name="score"></div>
-    <div><input type="button" onclick="create()" value="新增"></div>
+    <input type="button" onclick="create()" value="新增">
   </form>
   <table>
     <tr id="header">
@@ -42,9 +53,8 @@
       <td>操作</td>
     </tr>
     <tbody id="list"></tbody>
-
   </table>
-  
+  <div class="modal"></div>
 </body>
 </html>
 <script>
@@ -86,8 +96,26 @@ $.get("api/query.php",function(res){
 }
 
 //編輯資料的函式
-function update(){
+function op(id){
+  $(".modal").load("api/edit_form.php",{id}).show();
+  
+}
+function cl(){
+  $(".modal").html("").hide();
 
+}
+function update(id){
+  let name=$("#edit_name").val();
+  let classes=$("#edit_classes").val();
+  let num=$("#edit_num").val();
+  let score=$("#edit_score").val();
+  console.log(name,classes,num,score,id);
+
+  $.post("api/update.php",{name,classes,num,score,id},function(res){
+    console.log(res);
+    query();
+    $(".modal").html("").hide();
+  })
 }
 
 //刪除資料的函式
